--- a/my-ui-library/package.json
+++ b/my-ui-library/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "git": "^0.1.5",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0"
   },
