--- a/my-ui-library/package.json
+++ b/my-ui-library/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "vue": "^2.6.11",
+    "vue-property-decorator": "^9.0.0",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
